add CRUD functionalities

--- a/views/pages/home/home.ejs
+++ b/views/pages/home/home.ejs
@@ -9,7 +9,9 @@
 
 <br />
 
-<a href="/signup">Sign up</a>
+<a href="/signup">Sign in</a>
+
+<a href="/birthdays">See all birthdays</a>
 
 <!-- <form action="/create-birthday" method="POST">
     <label for="name">Name</label>
