--- a/views/pages/home/home.ejs
+++ b/views/pages/home/home.ejs
@@ -5,7 +5,7 @@
   Your brain is meant to process not remember!
 </h3>
 
-<a href="/signup"><button>Save birthdays</button></a>
+<a href="/birthdays/new"><button>Save birthdays</button></a>
 
 <br />
 
