--- a/views/pages/user/signup.ejs
+++ b/views/pages/user/signup.ejs
@@ -1,12 +1,18 @@
 <form action="/users" method="POST">
-  <label for="name">Name:</label>
-  <input type="text" name="name" />
+  <p>
+    <label for="name">Name:</label>
+    <input type="text" name="name" />
+  </p>
 
-  <label for="email">Email:</label>
-  <input type="email" name="email" />
+  <p>
+    <label for="email">Email:</label>
+    <input type="email" name="email" />
+  </p>
 
-  <label for="password">Password:</label>
-  <input type="password" name="password" />
+  <p>
+    <label for="password">Password:</label>
+    <input type="password" name="password" />
+  </p>
 
-  <input type="submit" value="Sign up" />
+  <button type="submit">Sign in</button>
 </form>
